--- a/client/views/indexGraph.twig
+++ b/client/views/indexGraph.twig
@@ -1,5 +1,44 @@
 {% extends 'base.twig' %}
 {% block title %}Index{% endblock %}
+{% block javascripts %}
+<script>
+		var chart;
+		var legend;
+
+		var chartData = [
+		{
+			"sentiment": "Positif",
+			"value": {{ tweets.pos }}
+		},
+		{
+			"sentiment": "Neutre",
+			"value": {{ tweets.neutral }}
+		},
+		{
+			"sentiment": "Négatif",
+			"value": {{ tweets.neg }}
+		},
+		];
+
+		AmCharts.ready(function () {
+	                // PIE CHART
+	                chart = new AmCharts.AmPieChart();
+	                chart.dataProvider = chartData;
+	                chart.titleField = "sentiment";
+	                chart.valueField = "value";
+	                chart.outlineColor = "#FFFFFF";
+	                chart.outlineAlpha = 0.8;
+	                chart.outlineThickness = 2;
+	                chart.balloonText = "[[title]]<br><span style='font-size:14px'><b>[[value]]</b> ([[percents]]%)</span>";
+	                // this makes the chart 3D
+	                chart.depth3D = 15;
+	                chart.angle = 30;
+
+	                // WRITE
+	                chart.write("chartdiv");
+	            });
+	</script>
+{% endblock %}
 {% block body %}
-	<h1>test</h1>
+	<div id="chartdiv"></div>
 {% endblock %}
