--- a/client/views/base.twig
+++ b/client/views/base.twig
@@ -1,21 +1,30 @@
-{##
- # /views/layout.twig
- #}
-
 <!DOCTYPE html>
 <html>
-	<head>
+<head>
 	{% block head %}
-		<title>{% block title %}{% endblock %}</title>
-        <script src="../lib/amcharts/amcharts.js" type="text/javascript"></script>
-        <script src="../lib/amcharts/pie.js" type="text/javascript"></script>
-        <link rel="stylesheet" href="../css/styles.css">
-	{% endblock %}
-	{% block javascripts %}
-	{% endblock %}
-	</head>
-	<body>
-		{% block body %}
-		{% endblock %}
-	</body>
+  <title>{% block title %}{% endblock %}</title>
+  <script src="../lib/amcharts/amcharts.js" type="text/javascript"></script>
+  <script src="../lib/amcharts/pie.js" type="text/javascript"></script>
+  <link rel="stylesheet" href="../css/styles.css">
+  <!--Import Google Icon Font-->
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--Import materialize.css-->
+  <link type="text/css" rel="stylesheet" href="../css/materialize.css"  media="screen,projection"/>
+
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script type="text/javascript" src="../js/materialize.js"></script>
+  <script type="text/javascript" src="../js/script.js"></script>
+
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  {% endblock %}
+  {% block javascripts %}
+  {% endblock %}
+</head>
+<body>
+  {% include 'header.twig' %}
+  {% block body %}
+  {% endblock %}
+  {% include 'footer.twig' %}
+</body>
 </html>	 
