--- a/client/views/indexGraph2.twig
+++ b/client/views/indexGraph2.twig
@@ -4,50 +4,61 @@
 <!-- Chart code -->
 {% block javascripts %}
 <script>
-  var chartData = [{
-   "nomMatch": "BEGIN",
-   "pos": 0,
-   "neutral": 0,
-   "neg": 0,
-   "total": 0
- },{
-   "nomMatch": "MHSC_SMC",
-   "pos": {{ feelings.MHSC_SMC.facebook.pos +  feelings.MHSC_SMC.twitter.pos }},
-   "neutral": {{ feelings.MHSC_SMC.facebook.neutral +  feelings.MHSC_SMC.twitter.neutral }},
-   "neg": {{ feelings.MHSC_SMC.facebook.neg +  feelings.MHSC_SMC.twitter.neg }},
-   "total": {{ feelings.MHSC_SMC.facebook.pos +  feelings.MHSC_SMC.twitter.pos +  feelings.MHSC_SMC.facebook.neutral +  feelings.MHSC_SMC.twitter.neutral + feelings.MHSC_SMC.facebook.neg +  feelings.MHSC_SMC.twitter.neg }}
- },{
-   "nomMatch": "SMC_ASSE",
-   "pos": {{ feelings.SMC_ASSE.facebook.pos +  feelings.SMC_ASSE.twitter.pos }},
-   "neutral": {{ feelings.SMC_ASSE.facebook.neutral +  feelings.SMC_ASSE.twitter.neutral }},
-   "neg": {{ feelings.SMC_ASSE.facebook.neg +  feelings.SMC_ASSE.twitter.neg }},
-   "total": {{ feelings.SMC_ASSE.facebook.pos +  feelings.SMC_ASSE.twitter.pos +  feelings.SMC_ASSE.facebook.neutral +  feelings.SMC_ASSE.twitter.neutral + feelings.SMC_ASSE.facebook.neg +  feelings.SMC_ASSE.twitter.neg }}
- }, {
-   "nomMatch": "ASSE_SMC",
-   "pos": {{ feelings.ASSE_SMC.facebook.pos +  feelings.ASSE_SMC.twitter.pos }},
-   "neutral": {{ feelings.ASSE_SMC.facebook.neutral +  feelings.ASSE_SMC.twitter.neutral }},
-   "neg": {{ feelings.ASSE_SMC.facebook.neg +  feelings.ASSE_SMC.twitter.neg }},
-   "total": {{ feelings.ASSE_SMC.facebook.pos +  feelings.ASSE_SMC.twitter.pos +  feelings.ASSE_SMC.facebook.neutral +  feelings.ASSE_SMC.twitter.neutral + feelings.ASSE_SMC.facebook.neg +  feelings.ASSE_SMC.twitter.neg }}
- }, {
-   "nomMatch": "ASNL_SMC",
-   "pos": {{ feelings.ASNL_SMC.facebook.pos +  feelings.ASNL_SMC.twitter.pos }},
-   "neutral": {{ feelings.ASNL_SMC.facebook.neutral +  feelings.ASNL_SMC.twitter.neutral }},
-   "neg": {{ feelings.ASNL_SMC.facebook.neg +  feelings.ASNL_SMC.twitter.neg }},
-   "total": {{ feelings.ASNL_SMC.facebook.pos +  feelings.ASNL_SMC.twitter.pos +  feelings.ASNL_SMC.facebook.neutral +  feelings.ASNL_SMC.twitter.neutral + feelings.ASNL_SMC.facebook.neg +  feelings.ASNL_SMC.twitter.neg }}
- }, {
-   "nomMatch": "SMC_OGN",
-   "pos": {{ feelings.SMC_OGN.facebook.pos +  feelings.SMC_OGN.twitter.pos }},
-   "neutral": {{ feelings.SMC_OGN.facebook.neutral +  feelings.SMC_OGN.twitter.neutral }},
-   "neg": {{ feelings.SMC_OGN.facebook.neg +  feelings.SMC_OGN.twitter.neg }},
-   "total": {{ feelings.SMC_OGN.facebook.pos +  feelings.SMC_OGN.twitter.pos +  feelings.SMC_OGN.facebook.neutral +  feelings.SMC_OGN.twitter.neutral + feelings.SMC_OGN.facebook.neg +  feelings.SMC_OGN.twitter.neg }}
- },
- {
-   "nomMatch": "END",
-   "pos": 0,
-   "neutral": 0,
-   "neg": 0,
-   "total": 0
- }];
+
+const feelings = {{ feelings|json_encode() }};
+
+// make it dynamic later, depends of the form:
+//think to change the first if in the for
+var twitter = true;
+var facebook = true;
+//-------------------------------------------
+
+var chartData = [];
+chartData.push({
+  "nomMatch": "BEGIN",
+  "pos": 0,
+  "neutral": 0,
+  "neg": 0,
+  "total": 0
+});
+
+for (var match in feelings) {
+  let pos = 0;
+  let neutral = 0;
+  let neg = 0;
+  if (match != "ALL") { // <- à modifier en == matchSelected (pour le dynamique)
+    if (twitter) {
+      if (facebook) { //both
+        pos = feelings[match].facebook.pos + feelings[match].twitter.pos;
+        neutral = feelings[match].facebook.neutral + feelings[match].twitter.neutral;
+        neg = feelings[match].facebook.neg + feelings[match].twitter.neg;
+      } else { //que twitter
+        pos = feelings[match].twitter.pos;
+        neutral = feelings[match].twitter.neutral;
+        neg = feelings[match].twitter.neg;
+      }
+    } else { //que facebook
+      pos = feelings[match].facebook.pos;
+      neutral = feelings[match].facebook.neutral;
+      neg = feelings[match].facebook.neg;
+    }
+    chartData.push({
+          "nomMatch": match,
+          "pos": pos,
+          "neutral": neutral,
+          "neg": neg,
+          "total": pos + neutral + neg
+    });  
+  }
+}
+
+  chartData.push({
+    "nomMatch": "END",
+    "pos": 0,
+    "neutral": 0,
+    "neg": 0,
+    "total": 0
+  });
 
  var chart =  AmCharts.makeChart("chartdiv2", {
   "type": "serial",
@@ -192,6 +203,7 @@ function zoomChart(){
 </script>
 {% endblock %}
 {% block body %}
-<pre></pre>
+<!-- <pre>{{ dump(feelings) }}</pre>
+ --><pre></pre>
 <div id="chartdiv2"></div>
 {% endblock %}
